[gd_scene load_steps=11 format=3 uid="uid://ck8dqqgtbt23g"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_2rrrr"]
[ext_resource type="SpriteFrames" uid="uid://jv1g7gepl7sm" path="res://resources/player_sprites.tres" id="1_kx4ti"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_dwo5f"]
[ext_resource type="Script" path="res://scripts/states/idle_state.gd" id="5_2gs7a"]
[ext_resource type="Script" path="res://scripts/states/jump_state.gd" id="6_1ke0d"]
[ext_resource type="Script" path="res://scripts/states/drop_state.gd" id="6_itsbb"]
[ext_resource type="Script" path="res://scripts/states/run_state.gd" id="7_kb1nr"]
[ext_resource type="Script" path="res://scripts/states/roll_state.gd" id="8_2y0l6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uxea3"]
size = Vector2(13, 27)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bgc7c"]
radius = 8.0
height = 26.0

[node name="Player" type="CharacterBody2D"]
modulate = Color(0.286275, 1, 0, 1)
script = ExtResource("1_2rrrr")
move_acceleration = 20.0
move_speed = 500.0
move_friction = 50.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -27)
sprite_frames = ExtResource("1_kx4ti")
animation = &"pull_up"
autoplay = "idle"

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -36.5)
shape = SubResource("RectangleShape2D_uxea3")

[node name="LegsCollision" type="CollisionShape2D" parent="."]
position = Vector2(1, -12)
shape = SubResource("CapsuleShape2D_bgc7c")

[node name="JumpTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="Rays" type="Node2D" parent="."]

[node name="JumpRay" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
target_position = Vector2(0, 10)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("object", "state")]
unique_name_in_owner = true
script = ExtResource("3_dwo5f")
object = NodePath("..")
state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("5_2gs7a")
object = NodePath("../..")

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("6_1ke0d")
object = NodePath("../..")

[node name="Drop" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("6_itsbb")
object = NodePath("../..")

[node name="Run" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("7_kb1nr")
object = NodePath("../..")

[node name="Roll" type="Node" parent="StateMachine" node_paths=PackedStringArray("object")]
script = ExtResource("8_2y0l6")
object = NodePath("../..")

[node name="TestingLabels" type="Node2D" parent="."]

[node name="StateLabel" type="Label" parent="TestingLabels"]
unique_name_in_owner = true
offset_left = -19.0
offset_top = -76.0
offset_right = 21.0
offset_bottom = -53.0
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
